<resources>
    <string name="app_name">UU-Talk</string>
    <string name="about_nav_title_text">About</string>
    <string name="product_description">Simple, Sophisticated, Inexpensive Telephone</string>
    <string name="website">Website</string>
    <string name="website_url" translatable="false">http://www.uu-talk.com</string>
    <string name="service_qq_desc">Service QQ</string>
    <string name="service_qq" translatable="false">1622122511</string>
    <string name="service_phone_desc">Service Telephone</string>
    <string name="contact_service">Free Serivce Call</string>
    <string name="service_phone" translatable="false">8000</string>
    <string name="product_version">Version: </string>
    <string name="copyright">Copyright</string>
    <string name="copyright_ownership">(HongKong) UuTalk Technology Ltd.</string>
    <string name="title_activity_chinese_telephone_tab" translatable="false">ChineseTelephoneTabActivity</string>
    <string name="title_setting" translatable="false">SettingActivity</string>
    <string name="title_activity_account_setting" translatable="false">AccountSettingActivity</string>
    <string name="title_activity_account_regist" translatable="false">AccountRegistActivity</string>
    <string name="title_activity_account_forget_psw" translatable="false">AccountForgetPSWActivity</string>
    <string name="title_activity_call_record_history_list_tab_content" translatable="false">CallRecordHistoryListActivity</string>
    <string name="call_record_history_list_tab_title">Recent</string>
    <string name="call_record_history_list_nav_title">Recent Calls</string>
    <string name="outgoingCall_imageView_content_description" translatable="false">outgoing call image view</string>
    <string name="recordDetail_imageButton_content_description" translatable="false">call record detail info image button</string>
    <string name="callRecord_callType_imageView_content_description" translatable="false">call type image view</string>
    <string name="yesterdayCallRecord_callDate">Yesterday</string>
    <string-array name="callRecord_callDate_daysOfWeek">
        <item>Sun.</item>
        <item>Mon.</item>
        <item>Tue.</item>
        <item>Wed.</item>
        <item>Thur.</item>
        <item>Fri.</item>
        <item>Sat.</item>
    </string-array>
    <string name="callRecord_detailInfo_imageButton_content_description" translatable="false">call record detail info image button</string>
    <string name="callRecord_unknownCalleePhone_alertDialog_message">Cannot dial unknow number</string>
    <string name="callRecord_unknownCalleePhone_alertDialog_reselectBtn_title">Reselect</string>
    <string name="title_activity_call_record_detail_info" translatable="false">CallRecordDetailInfoActivity</string>
    <string name="call_record_detailinfo_title">Detail</string>
    <string name="callRecord_detailInfo_contact_avatar_imageView_content_description" translatable="false">call record contact avatar image view</string>
    <string name="callRecord_detailInfo_outgoingCall_callType">Outgoing Call</string>
    <string name="callRecord_detailInfo_incomingCall_callType">Incoming Call</string>
    <string name="callRecord_detailInfo_initiateTime_year">-</string>
    <string name="callRecord_detailInfo_initiateTime_month">-</string>
    <string name="callRecord_detailInfo_initiateTime_day"></string>
    <string name="callRecord_detailInfo_duration_seconds">s</string>
    <string name="callRecord_detailInfo_duration_minutes">minutes</string>
    <string name="callRecord_detailInfo_missed_incomingCall">Missed Call</string>
    <string name="callRecord_detailInfo_cancel_outgoingCall">Call Cancelled</string>
    <string name="callRecord_detailInfo_failed_outgoingCall">Call Failed</string>
    <string name="callRecord_detailInfo_operation4directdial">Dial via network</string>
    <string name="callRecord_detailInfo_operation4callback">Callback</string>
    <string name="callRecord_detailInfo_operation4sms">SMS</string>
    <string name="callRecord_detailInfo_callbackRequest_outgoingCall">Callback Request</string>
    <string name="title_activity_dial_tab_content" translatable="false">DialTabContentActivity</string>
    <string name="dial_tab_title">Dial</string>
    <string name="dialPhone_tipText"></string>
    <string name="dialBtn_imageView_content_description" translatable="false">dial button image view</string>
    <string name="dialBtn_imageButton_content_description" translatable="false">dial button image button</string>
    <string name="dial_phone_callee_unknown">Unknown Contact</string>
    <string name="insertPhone2Contact_modeSelectPopupWindow_titleTextView_text">Save ***</string>
    <string name="insertPhone2Contact_modeSelectPopupWindow_insert2NewContact">Create new contact</string>
    <string name="insertPhone2Contact_modeSelectPopupWindow_insert2ExistedContact">Save to existing contact</string>
    <string name="insertPhone2Contact_modeSelectPopupWindow_cancelBtn_title">Cancel</string>
    <string name="title_activity_contact_list_tab_content" translatable="false">ContactListTabContentActivity</string>
    <string name="contact_search_editText_hint">Search Contacts</string>
    <string name="contact_list_tab7nav_title">Contacts</string>
    <string name="addressBook_contact_avatar_imageView_content_description" translatable="false">contact avatar image view</string>
    <string name="contact_hasNoPhone_alertDialog_title">Contact has no number</string>
    <string name="contact_hasNoPhone_alertDialog_reselectBtn_title">Reselect</string>
    <string name="contactPhone_dialMode_selectPopupWindow_titleTextView_text">Select dial mode for ***</string>
    <string name="contactPhone_dialMode_selectPopupWindow_directdialBtn_title">Dial via network</string>
    <string name="contactPhone_dialMode_selectPopupWindow_callbackBtn_title">Callback</string>
    <string name="contactPhone_dialMode_selectPopupWindow_dialerBtn_title">Dial by phone</string>
    <string name="contactPhone_dialMode_selectPopupWindow_cancelBtn_title">Cancel</string>
    <string name="contactPhone_dialMode_selectPopupWindow_contactPhones_4select">number(s) to select</string>
    <string name="contactPhones_selectPopupWindow_titleTextView_text">Select number of ***</string>
    <string name="contactPhones_selectPopupWindow_4directdial">Dial via network</string>
    <string name="contactPhones_selectPopupWindow_4callback">Callback</string>
    <string name="contactPhones_selectPopupWindow_4dialer">Dial by phone</string>
    <string name="contactPhones_selectPopupWindow_cancelBtn_title">Cancel</string>
    <string name="contactPhone_dialMode_selectPopupWindow_informTextView_text">Dia via network: high speed and low price, select when you have wifi</string>
    <string name="contactPhone_dialMode_selectPopupWindow_callback_informTextView_text">Callback: high voice quality, select when you are using 3G</string>
    <string name="title_activity_more_tab_content" translatable="false">MoreTabContentActivity</string>
    <string name="more_tab7nav_title">More</string>
    <string name="title_activity_outgoing_call" translatable="false">OutgoingCallActivity</string>
    <string name="outgoingCallBG_imageView_content_description" translatable="false">outgoing call background image view</string>
    <string name="outgoing_call_unknownState">Unknown</string>
    <string name="outgoing_call_trying">Calling</string>
    <string name="outgoing_call_earlyMedia7RemoteRing">Waiting for answer</string>
    <string name="outgoing_call_failed">Call Failed</string>
    <string name="end_outgoing_call">Ending Call</string>
    <string name="outgoing_call_ended">Call Ended</string>
    <string name="callControllerItem_imageView_content_description" translatable="false">call controller image view</string>
    <string name="callController_contactItem_text">Contacts</string>
    <string name="callController_handfreeItem_text">Speaker</string>
    <string name="callController_muteItem_text">Mute</string>
    <string name="callController_keyboardItem_text">Keypad</string>
    <string name="endCall_imageView_content_description" translatable="false">end call image button</string>
    <string name="contactslist_slidingDrawer_handleBtn_text" translatable="false">contacts list sliding drawer handle button text</string>
    <string name="hidecontactslist_button_text">Back</string>
    <string name="exportedOutgoingCall_tipTextView_text">Select call mode</string>
    <string name="exportedOutgoingCall_directDialTextView_text">UU-Talk Dial via network</string>
    <string name="exportedOutgoingCall_callbackTextView_text">UU-Talk Callback</string>
    <string name="exportedOutgoingCall_autoSelectTextView_text">Auto Select</string>
    <string name="hideKeyboard_imageView_content_description" translatable="false">hide keyboard image button</string>
    <string name="sending_request">Sending request</string>
    <string name="callbackWaiting_imageView_content_description" translatable="false">callback waiting image view</string>
    <string name="send_callbackCallRequest_succeed">Callback Submitted</string>
    <string name="send_callbackCallRequest_failed">Callback Failed</string>
    <string name="callbackWaiting_textView_succeed" formatted="false">Callback submitted successfully, your number (%s) will receive callback call later, system will call %s after answered.</string>
    <string name="callbackWaiting_textView_failed">Fail to submit callback</string>
    <string name="network_timeout">Network timeout, current network state may be unstable.</string>
    <string name="no_enough_money">Insufficient funds, pls charge.</string>
    <string name="cancelExportedOutgoingCall_imageButton_content_description" translatable="false">cancel exported outgoing call image button</string>
    <string name="back4waitingCallbackCall_imageButton_content_description" translatable="false">back for waiting callback call image button</string>
    <string name="endCall_imageButton_content_description" translatable="false">end call image button</string>
    <string name="keyboardBtn_imageButton_content_description" translatable="false">keyboard image button</string>
    <string name="makeDirectDialSipVoiceCallFailed">Network busy, pls retry later or dial by callback</string>
	<string name="phone_number_must_start_with_country_code">Pls add country code starting with 00 when making overseas call!</string>
    <string name="detect_new_version" formatted="false">Version %s found，\nUpdate now？\nDescription：\n%s</string>
    <string name="upgrade">Update</string>
    <string name="menu_settings">More Settings</string>
    <string name="notice_center">Message Center</string>
    <string name="view_notice">View Message</string>
    <string name="account">Account</string>
    <string name="earn_money">Money Gain</string>
    <string name="click_ad_to_earn_money">Click ad to earn money, action now!</string>
    <string name="account_setting_item">Switch Account</string>
    <string name="account_changePSW_item">Modify Password</string>
    <string name="account_getPSW_item">Find Password</string>
    <string name="account_charge_item">Top Up</string>
    <string name="my_suites_item">My Suites</string>
    <string name="search">Query</string>
    <string name="fee_query_item">Fee Query</string>
    <string name="setting">Setting</string>
    <string name="back">Back</string>
    <string name="setting_dial_item">Dial Setting</string>
    <string name="bind_number_inform">Info: The binded number will be called in callback mode.</string>
    <string name="set_bind_number_title">Set callback number</string>
    <string name="set_bind_number_message">Callback Number: </string>
    <string name="input_card_number">Please input card number</string>
    <string name="input_card_pwd">Please input card password</string>
    <string name="charge">Top Up</string>
    <string name="pls_select_country">Select Your Country</string>
</resources>