<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/card_charge_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:visibility="visible" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/card_number_et"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/textfield_selector"
                    android:hint="@string/input_card_number"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/card_pwd_et"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/textfield_selector"
                    android:hint="@string/input_card_pwd"
                    android:singleLine="true"
                    android:textColor="@android:color/black" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/green_btn_bg"
                    android:onClick="onDoCardChargeClick"
                    android:text="@string/charge"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</LinearLayout>