<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/half_transparent" >

    <LinearLayout
        android:id="@+id/modify_psw_popupWindow_relativeLayout"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/popupwindow_relativelayout_bg"
        android:orientation="vertical"
        android:paddingBottom="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/popupwindow_title_relativelayout_bg"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/set_bind_number_title"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|left"
                android:text="@string/bind_number_inform"
                android:textColor="@color/red"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/bind_number_choose_country"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
				android:clickable="true"
                android:background="@drawable/select_country_btn_bg"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/country_flag"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/china_flat"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/setAuth_choose_country_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="@android:color/transparent"
                    android:drawableRight="@drawable/down_into_icon"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:text="@string/pls_select_country"
                    android:textColor="@android:color/black"
                    android:textSize="17dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/set_bind_number_message"
                    android:textColor="@color/dark_dim_gray"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/set_auth_number_editText"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/textfield_selector"
                    android:ellipsize="end"
                    android:inputType="number"
                    android:textColor="@android:color/black" >

                    <requestFocus />
                </EditText>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/set_auth_cancelBtn"
                style="@style/popup_window_cancel_bt"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_marginRight="10dp" />

            <Button
                android:id="@+id/set_auth_confirmBtn"
                style="@style/popup_window_ok_bt"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>